--- a/app/src/main/res/layout/top_view_style.xml
+++ b/app/src/main/res/layout/top_view_style.xml
@@ -15,11 +15,17 @@
         <TextView
             android:id="@+id/text_top_name"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="center"
-            android:textStyle="bold"
             android:textColor="@color/black33"
-            android:textSize="@dimen/ctv_sizen_16" />
+            android:textSize="@dimen/ctv_sizen_16"
+            android:textStyle="bold" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="0.5dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/dive_line" />
 
 
     </RelativeLayout>
