--- a/app/src/main/res/layout/activity_msg.xml
+++ b/app/src/main/res/layout/activity_msg.xml
@@ -15,6 +15,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:layout_marginTop="50dp"
+        android:visibility="gone"
         app:swipe_style="classic">
 
         <include
